# docs/swagger.yaml
@@ -1,11 +1,50 @@
 definitions:
-  model.Person:
+  model.Item:
     properties:
-      address:
+      created_at:
+        type: string
+      description:
         type: string
       id:
         type: integer
-      name:
+      item_code:
+        type: string
+      order_uuid:
+        type: string
+      quantity:
+        type: integer
+      updated_at:
+        type: string
+    type: object
+  model.ItemDTO:
+    properties:
+      description:
+        type: string
+      item_code:
+        type: string
+      quantity:
+        type: integer
+    type: object
+  model.OrderHandler.request:
+    properties:
+      customer_name:
+        type: string
+      items:
+        items:
+          $ref: '#/definitions/model.ItemDTO'
+        type: array
+      ordered_at:
+        type: string
+    type: object
+  model.OrderHandler.response:
+    properties:
+      customer_name:
+        type: string
+      items:
+        items:
+          $ref: '#/definitions/model.Item'
+        type: array
+      ordered_at:
         type: string
       uuid:
         type: string
@@ -27,23 +66,28 @@ info:
   title: Swagger Example API
   version: "1.0"
 paths:
-  /person:
-    get:
+  /order:
+    post:
       consumes:
       - application/json
-      description: get all person
+      description: Create Order
+      parameters:
+      - description: query params
+        in: body
+        name: request
+        required: true
+        schema:
+          $ref: '#/definitions/model.OrderHandler.request'
       produces:
       - application/json
       responses:
         "200":
           description: OK
           schema:
-            items:
-              $ref: '#/definitions/model.Person'
-            type: array
-      summary: Get All Person
+            $ref: '#/definitions/model.OrderHandler.response'
+      summary: Create Order
       tags:
-      - person
+      - order
 securityDefinitions:
   BasicAuth:
     type: basic
